--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 
 
 <p>欢迎来到zhou666的个人博客主页</p>
+<h3>Git教程图书版地址</h3>
 <p>http://git.oschina.net/progit/</p>
+<h3>Git教程博客版地址</h3>
+<p>http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000</p>
 
