--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <p>欢迎来到zhou666的个人博客主页</p>
 <h3>Git教程图书版地址</h3>
-<a href="http://git.oschina.net/progit/">http://git.oschina.net/progit/</a>
+<a href="http://git.oschina.net/progit/" target="_blank">http://git.oschina.net/progit/</a>
 <h3>Git教程博客版地址</h3>
-<a href="http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000">http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000</a>
+<a href="http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000" target="_blank">http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000</a>
 
